// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

// package helloworld;


service FacileServer {
  rpc StartJobWait (DataMessage) returns (PredictionMessage) {}
  rpc StartJobNoWait (DataMessage) returns (IDMessage) {}
  rpc ProbeJob (IDMessage) returns (PredictionMessage) {}
  rpc RequestClientID (NullParam) returns (IDMessage) {}
}

message NullParam {}

message DataMessage {
  string client_id = 1;
  bytes data = 2;
  int32 batch_size = 4;
  int32 num_data = 3;
}

message PredictionMessage {
  bool complete = 1;
  bytes prediction = 2;
  string error = 3;
  float infer_time_CPU = 4;
  float infer_time_GPU = 5;
  float server_time = 6;
}

message IDMessage {
  string new_id = 1;
  string error = 2;
}
